--- a/portfolio/public/css/base.css
+++ b/portfolio/public/css/base.css
@@ -109,6 +109,11 @@ h6 {
     padding: 5px 0;
 }
 
+.img_profil {
+    height: 200px;
+    width: 150px;
+}
+
 .bar {
     display: block;
     border: 1px solid rgba(75, 53, 13, 0.4);
